# django-deploy-kit

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  django-deploy-kit-agent-prompt.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
django_deploy_kit/: __init__.py  cli.py  detector.py  installer.py  reporter.py  rollback.py  utils.py  validators.py
django_deploy_kit/generators/: __init__.py  socket.py
django_deploy_toolkit/: __init__.py  celery_detector.py  celery_installer.py  cli.py  installer.py  reporter.py  rollback.py  utils.py  validators.py
django_deploy_toolkit/generators/: __init__.py  celery_beat.py  celery_worker.py  nginx.py  service.py
tests/: test_celery_detector.py  test_celery_generators.py  test_celery_installer.py  test_cli.py  test_detector.py  test_generators.py  test_installer.py  test_reporter.py  test_rollback.py  test_utils.py  test_validators.py
