[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-deploy-toolkit"
version = "0.2.0"
description = "Auto-generate and install Gunicorn, Nginx, Celery & Celery Beat configuration for Django projects on Ubuntu/Debian."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Antu Saha" },
]
maintainers = [
    { name = "Antu Saha" },
]
keywords = [
    "django",
    "deployment",
    "gunicorn",
    "nginx",
    "systemd",
    "celery",
    "celery-beat",
    "devops",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",

    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.0",
    "rich>=12.0",
    "jinja2>=3.0",
    "psutil>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "coverage>=7.0",
]

[project.scripts]
django-deploy = "django_deploy_toolkit.cli:main"

[project.urls]
Homepage = "https://github.com/antusaha970/django-deploy-toolkit"
Issues = "https://github.com/antusaha970/django-deploy-toolkit/issues"
Documentation = "https://github.com/antusaha970/django-deploy-toolkit#readme"
Changelog = "https://github.com/antusaha970/django-deploy-toolkit/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["django_deploy_toolkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["django_deploy_toolkit"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
